[gd_scene load_steps=5 format=3 uid="uid://bqlypwwq7tydu"]

[ext_resource type="PackedScene" uid="uid://dp8scd5ivrcme" path="res://meshes/wpn/wpn_akm_hud.glb" id="1_pan54"]
[ext_resource type="Script" path="res://scripts/player/wpn_scenes/wpn.gd" id="2_whd0f"]
[ext_resource type="PackedScene" uid="uid://cwve0jsrxdksy" path="res://partickals/fyze_sprite.tscn" id="3_nuv57"]
[ext_resource type="Texture2D" path="res://textures/crosshairs/cro_posp_open.dds" id="3_u4m4i"]

[node name="wpn_akm_hud" node_paths=PackedStringArray("animation_player", "fyze_sprite") instance=ExtResource("1_pan54")]
transform = Transform3D(1, 0, 0, 0, 0.999848, -0.0174524, 0, 0.0174524, 0.999848, 0, -0.008, 0)
script = ExtResource("2_whd0f")
animation_player = NodePath("AnimationPlayer")
fyze_sprite = NodePath("wpn_akm_hud_ogf/FirePos/fyze_sprite")
scope_texture = ExtResource("3_u4m4i")

[node name="wpn_akm_hud_ogf" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)

[node name="Skeleton3D" parent="wpn_akm_hud_ogf" index="0"]
bones/1/position = Vector3(-0.00189176, 8.96136e-11, -0.091039)
bones/1/rotation = Quaternion(-0.213266, -0.572596, 0.137183, 0.779636)
bones/2/position = Vector3(-0.093612, -0.16079, 0.00438379)
bones/2/rotation = Quaternion(0.952023, 0.0836841, 0.217451, 0.198407)
bones/3/rotation = Quaternion(0.00238049, 0.00247206, 0.696449, 0.717598)
bones/4/position = Vector3(-0.219126, -0.00323838, -0.00399717)
bones/4/rotation = Quaternion(0.542807, -0.0223703, -0.0734893, 0.836337)
bones/5/rotation = Quaternion(0.80551, -0.584524, 0.0832855, 0.0504779)
bones/6/rotation = Quaternion(0.140142, -0.246286, -0.0736415, 0.95618)
bones/7/rotation = Quaternion(0.39242, -0.225845, -0.150461, 0.878841)
bones/8/rotation = Quaternion(0.482084, -0.575626, -0.156931, 0.641578)
bones/9/rotation = Quaternion(0.231455, -0.362442, -0.168861, 0.886877)
bones/10/rotation = Quaternion(0.0894814, -0.148474, -0.650205, 0.739717)
bones/11/rotation = Quaternion(0.425959, 0.0242934, 0.068516, 0.901817)
bones/12/rotation = Quaternion(0.24052, -0.349717, -0.361741, 0.830055)
bones/13/rotation = Quaternion(0.0414755, 0.0284133, -0.609437, 0.791239)
bones/14/rotation = Quaternion(0.06, 0.0301221, 0.163093, 0.984324)
bones/15/position = Vector3(-0.0543954, 0.00257996, -0.0383709)
bones/15/rotation = Quaternion(0.37643, -0.210067, -0.558266, 0.708881)
bones/16/rotation = Quaternion(0.0839569, -0.0679956, -0.26713, 0.957585)
bones/17/rotation = Quaternion(0.0141301, 0.0672934, -0.113804, 0.991121)
bones/18/position = Vector3(-0.00636936, 0.0122809, 0.0177019)
bones/18/rotation = Quaternion(0.971084, -0.170082, -0.109838, 0.126501)
bones/19/rotation = Quaternion(0.838461, -0.0723616, 0.00595128, 0.540103)
bones/20/rotation = Quaternion(0.00732464, -0.00482205, 0.043429, 0.999018)
bones/21/position = Vector3(0.196819, -0.123426, -0.264773)
bones/21/rotation = Quaternion(-0.184974, 0.166998, -0.0504473, 0.967136)
bones/22/position = Vector3(-3.72529e-08, 0, 5.96046e-08)
bones/22/rotation = Quaternion(-1.39698e-08, -1.53668e-08, 1.86265e-09, 1)
bones/24/position = Vector3(-4.76837e-07, 0.0928072, -10)
bones/25/rotation = Quaternion(-1.07102e-08, 5.2387e-09, 3.7253e-09, 1)
bones/26/position = Vector3(8.66443e-05, -0.0431424, -0.134927)
bones/26/rotation = Quaternion(-1.07102e-08, 5.6025e-09, 3.7253e-09, 1)
bones/27/rotation = Quaternion(2.32832e-09, -1.84813e-09, 3.7253e-09, 1)
bones/29/position = Vector3(-0.000243851, -0.02453, -0.14426)
bones/29/rotation = Quaternion(-1.07102e-08, 5.95171e-09, 4.0891e-09, 1)
bones/30/position = Vector3(0.000318314, -0.0248888, -0.000801354)
bones/33/position = Vector3(-0.000154342, 0.0547903, -0.1491)
bones/34/position = Vector3(0.053806, 0.00276899, -0.0360962)
bones/34/rotation = Quaternion(-0.438799, -0.0027467, 0.898563, 0.00567652)
bones/35/position = Vector3(-0.140415, -0.0167509, 0.0161087)
bones/35/rotation = Quaternion(0.0278643, -0.62965, 0.359979, 0.687881)
bones/36/rotation = Quaternion(0.70674, 0.126137, 0.695692, 0.0249039)
bones/37/position = Vector3(-0.225028, 0.00120655, 0.00649022)
bones/37/rotation = Quaternion(-0.201151, -0.107153, 0.0218821, 0.973436)
bones/38/rotation = Quaternion(-0.494471, -0.132239, -0.102422, 0.852948)
bones/39/rotation = Quaternion(0.663885, -0.047549, 0.0580782, 0.744059)
bones/40/rotation = Quaternion(0.854558, -0.466084, -0.126897, 0.190773)
bones/41/rotation = Quaternion(0.207466, -0.0505999, 0.000335705, 0.976933)
bones/42/rotation = Quaternion(0.503665, 0.557654, -0.324759, 0.574348)
bones/43/rotation = Quaternion(0.844075, -0.513001, 0.047427, 0.148721)
bones/44/rotation = Quaternion(0.134466, 0.0095219, 0.014466, 0.990767)
bones/45/rotation = Quaternion(0.568213, 0.58036, -0.251878, 0.526188)
bones/46/rotation = Quaternion(0.796372, -0.575779, 0.0894829, 0.162058)
bones/47/rotation = Quaternion(0.0192273, -0.018098, -0.0726363, 0.997009)
bones/48/rotation = Quaternion(0.524605, 0.599256, -0.423859, 0.431306)
bones/49/rotation = Quaternion(0.78554, -0.528506, 0.257737, 0.192822)
bones/50/rotation = Quaternion(0.00939986, -0.0138557, -0.439566, 0.898054)
bones/51/position = Vector3(-0.00649249, 0.0173988, 0.0123828)
bones/51/rotation = Quaternion(0.168831, 0.386462, -0.381915, 0.822365)
bones/52/rotation = Quaternion(0.00833175, -0.0214245, 0.50381, 0.863508)
bones/53/rotation = Quaternion(0.000213635, 0.0246597, 0.329121, 0.943966)

[node name="ShootPos" type="BoneAttachment3D" parent="wpn_akm_hud_ogf" index="1"]
transform = Transform3D(0.939134, 0.0357979, 0.341682, -0.159359, 0.926479, 0.340941, -0.304356, -0.37464, 0.875793, -0.0367741, -0.318934, -0.875363)
bone_name = "wpn_silencer"
bone_idx = 32
use_external_skeleton = true
external_skeleton = NodePath("../Skeleton3D")

[node name="FirePos" type="BoneAttachment3D" parent="wpn_akm_hud_ogf" index="2"]
transform = Transform3D(0.939134, 0.0357979, 0.341682, -0.159359, 0.926479, 0.340941, -0.304356, -0.37464, 0.875793, -0.0367741, -0.318934, -0.875363)
bone_name = "wpn_silencer"
bone_idx = 32
use_external_skeleton = true
external_skeleton = NodePath("../Skeleton3D")

[node name="fyze_sprite" parent="wpn_akm_hud_ogf/FirePos" index="0" instance=ExtResource("3_nuv57")]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
